Syntax/Parser.output
   0  $accept : %entry% $end

   1  brace_token : TOK_LBRACE
   2              | TOK_RBRACE

   3  bi_op_token : TOK_LTEQ
   4              | TOK_LT
   5              | TOK_GTEQ
   6              | TOK_GT
   7              | TOK_EQEQ
   8              | TOK_BANGEQ
   9              | TOK_LOR
  10              | TOK_LAND
  11              | TOK_LXOR
  12              | TOK_BOR
  13              | TOK_BAND
  14              | TOK_BXOR
  15              | TOK_LSHIFT
  16              | TOK_RSHIFT
  17              | TOK_ADD
  18              | TOK_MUL
  19              | TOK_DIV
  20              | TOK_MOD
  21              | TOK_BOREQ

  22  asgn_token : TOK_BANDEQ
  23             | TOK_BXOREQ
  24             | TOK_LSHIFTEQ
  25             | TOK_RSHIFTEQ
  26             | TOK_ADDEQ
  27             | TOK_MINUSEQ
  28             | TOK_MULEQ
  29             | TOK_DIVEQ
  30             | TOK_MODEQ
  31             | TOK_EQ

  32  keyword_token : TOK_TYPE
  33                | TOK_AS
  34                | TOK_IF
  35                | TOK_ELSE
  36                | TOK_WHILE
  37                | TOK_FOR
  38                | TOK_BREAK
  39                | TOK_CONTINUE
  40                | TOK_LET
  41                | TOK_MUT
  42                | TOK_IN
  43                | TOK_MATCH
  44                | TOK_FUN
  45                | TOK_RETURN
  46                | TOK_INTERFACE
  47                | TOK_IMPL
  48                | TOK_EXTENDS

  49  arrow_token : TOK_EQGT
  50              | TOK_MINUSGT

  51  type_token : TOK_TyBool
  52             | TOK_TyChar
  53             | TOK_TyInt
  54             | TOK_TyFloat

  55  other_token : TOK_TRUE
  56              | TOK_FALSE
  57              | TOK_THIS
  58              | TOK_MINUS
  59              | TOK_BANG
  60              | TOK_LPAREN
  61              | TOK_RPAREN
  62              | TOK_LBRACK
  63              | TOK_RBRACK
  64              | TOK_COLON
  65              | TOK_COMMA
  66              | TOK_DOT
  67              | TOK_UNDERSCORE
  68              | TOK_SEMICOLON
  69              | TOK_Integer
  70              | TOK_Double
  71              | TOK_Char
  72              | TOK_String

  73  non_ident_token : other_token
  74                  | bi_op_token
  75                  | asgn_token
  76                  | keyword_token
  77                  | brace_token
  78                  | type_token
  79                  | arrow_token

  80  any_token : non_ident_token
  81            | TOK_LowerIdent
  82            | TOK_UpperIdent

  83  program : TOK_EOF
  84          | top_clause program

  85  top_clause : TOK_TYPE TOK_UpperIdent TOK_LBRACE struct_fields TOK_RBRACE
  86             | TOK_TYPE TOK_UpperIdent TOK_LBRACK adt_branches TOK_RBRACK
  87             | TOK_INTERFACE TOK_UpperIdent TOK_LBRACE function_decls TOK_RBRACE
  88             | TOK_INTERFACE TOK_UpperIdent TOK_EXTENDS interface_name_list_nonempty TOK_LBRACE function_decls TOK_RBRACE
  89             | TOK_IMPL TOK_UpperIdent TOK_LBRACE function_impls TOK_RBRACE
  90             | TOK_IMPL TOK_UpperIdent TOK_FOR TOK_UpperIdent TOK_LBRACE function_impls TOK_RBRACE
  91             | function_impl
  92             | function_impl TOK_SEMICOLON
  93             | TOK_LET variable_pattern TOK_EQ expr TOK_SEMICOLON
  94             | TOK_LET variable_pattern TOK_SEMICOLON
  95             | TOK_LET variable_pattern TOK_EQ expr error
  96             | stmt TOK_SEMICOLON
  97             | error

  98  struct_fields :
  99                | struct_field
 100                | struct_field TOK_COMMA struct_fields

 101  struct_field : TOK_LowerIdent TOK_COLON typ
 102               | TOK_AS TOK_LowerIdent TOK_COLON typ

 103  adt_branches :
 104               | adt_branch
 105               | adt_branch TOK_COMMA adt_branches

 106  adt_branch : TOK_UpperIdent
 107             | TOK_UpperIdent TOK_LPAREN typ_list_nonempty TOK_RPAREN
 108             | TOK_UpperIdent TOK_LPAREN named_adt_params_nonempty TOK_RPAREN
 109             | error

 110  named_adt_params_nonempty : named_adt_param
 111                            | named_adt_param TOK_COMMA named_adt_params_nonempty

 112  named_adt_param : TOK_LowerIdent TOK_COLON typ

 113  interface_name_list_nonempty : TOK_UpperIdent
 114                               | TOK_UpperIdent TOK_COMMA interface_name_list_nonempty

 115  function_decls :
 116                 | function_decl
 117                 | function_decl TOK_SEMICOLON function_decls

 118  function_decl : TOK_FUN TOK_LowerIdent TOK_LPAREN function_decl_args TOK_RPAREN function_decl_ret

 119  function_decl_args :
 120                     | function_decl_args_nonempty

 121  function_decl_args_nonempty : function_decl_arg
 122                              | function_decl_arg TOK_COMMA function_decl_args_nonempty

 123  function_decl_arg : TOK_LowerIdent TOK_COLON typ
 124                    | error

 125  function_decl_ret : TOK_MINUSGT typ
 126                    |

 127  function_impls :
 128                 | function_impl
 129                 | function_impl TOK_SEMICOLON function_impls

 130  function_impl : function_decl TOK_LBRACE stmt_list TOK_RBRACE

 131  typ : TOK_LPAREN TOK_RPAREN
 132      | TOK_TyBool
 133      | TOK_TyInt
 134      | TOK_TyFloat
 135      | TOK_TyChar
 136      | TOK_TyThis
 137      | TOK_UpperIdent
 138      | TOK_LBRACK typ TOK_SEMICOLON TOK_Integer TOK_RBRACK
 139      | TOK_LPAREN typ_list_nonempty TOK_RPAREN
 140      | error

 141  typ_list_nonempty : typ
 142                    | typ TOK_COMMA typ_list_nonempty

 143  stmt_list :
 144            | stmt stmt_list

 145  stmt : expr TOK_SEMICOLON
 146       | TOK_RETURN expr TOK_SEMICOLON
 147       | TOK_BREAK TOK_SEMICOLON
 148       | TOK_CONTINUE TOK_SEMICOLON
 149       | lvalue assignment_op expr TOK_SEMICOLON
 150       | TOK_LET pattern TOK_EQ expr TOK_SEMICOLON
 151       | TOK_LET pattern TOK_SEMICOLON
 152       | TOK_LBRACE stmt_list TOK_RBRACE
 153       | TOK_IF TOK_LPAREN expr TOK_RPAREN stmt
 154       | TOK_IF TOK_LPAREN expr TOK_RPAREN stmt TOK_ELSE stmt
 155       | TOK_FOR TOK_LPAREN pattern TOK_IN expr TOK_RPAREN stmt
 156       | TOK_WHILE TOK_LPAREN expr TOK_RPAREN stmt
 157       | TOK_MATCH TOK_LPAREN expr TOK_RPAREN TOK_LBRACE match_branches TOK_RBRACE
 158       | TOK_RETURN expr error
 159       | TOK_BREAK error
 160       | TOK_CONTINUE error
 161       | lvalue assignment_op expr error
 162       | TOK_LET pattern TOK_EQ expr error
 163       | expr error
 164       | TOK_ELSE error
 165       | TOK_IF TOK_LPAREN TOK_RPAREN stmt
 166       | TOK_ELSE TOK_LPAREN TOK_RPAREN stmt
 167       | TOK_WHILE TOK_LPAREN TOK_RPAREN stmt
 168       | TOK_MATCH TOK_LPAREN TOK_RPAREN stmt
 169       | assignment_op expr TOK_SEMICOLON
 170       | expr assignment_op expr TOK_SEMICOLON
 171       | TOK_IF expr TOK_RPAREN
 172       | TOK_WHILE expr TOK_RPAREN
 173       | TOK_MATCH expr TOK_RPAREN
 174       | TOK_IF TOK_LPAREN error
 175       | TOK_WHILE TOK_LPAREN error
 176       | TOK_MATCH TOK_LPAREN error
 177       | TOK_LBRACE stmt error
 178       | TOK_FOR TOK_LPAREN pattern expr TOK_RPAREN stmt
 179       | TOK_FOR TOK_LPAREN pattern TOK_IN TOK_RPAREN stmt
 180       | TOK_LET pattern expr TOK_SEMICOLON
 181       | TOK_LET pattern TOK_EQ TOK_SEMICOLON
 182       | error

 183  lvalue : TOK_LowerIdent

 184  assignment_op : TOK_EQ
 185                | TOK_BOREQ
 186                | TOK_BANDEQ
 187                | TOK_BXOREQ
 188                | TOK_LSHIFTEQ
 189                | TOK_RSHIFTEQ
 190                | TOK_ADDEQ
 191                | TOK_MINUSEQ
 192                | TOK_MULEQ
 193                | TOK_DIVEQ
 194                | TOK_MODEQ

 195  match_branches :
 196                 | match_branch match_branches

 197  match_branch : pattern TOK_EQGT stmt
 198               | error

 199  literal : TOK_LPAREN TOK_RPAREN
 200          | TOK_TRUE
 201          | TOK_FALSE
 202          | TOK_Integer
 203          | TOK_Double
 204          | TOK_Char
 205          | TOK_String

 206  pattern : TOK_UNDERSCORE
 207          | literal
 208          | variable_pattern
 209          | TOK_MUT pattern
 210          | pattern TOK_AS variable_pattern
 211          | pattern TOK_COLON typ
 212          | TOK_UpperIdent
 213          | TOK_UpperIdent TOK_LPAREN pattern_list_nonempty TOK_RPAREN
 214          | TOK_UpperIdent TOK_LBRACE struct_pattern_fields TOK_RBRACE
 215          | TOK_LPAREN pattern_list_nonempty TOK_RPAREN
 216          | pattern TOK_AS error
 217          | TOK_UpperIdent TOK_LPAREN TOK_RPAREN
 218          | TOK_UpperIdent TOK_LPAREN
 219          | TOK_LowerIdent TOK_LPAREN pattern_list_nonempty TOK_RPAREN
 220          | TOK_UpperIdent TOK_LBRACE error
 221          | TOK_LowerIdent TOK_LBRACE struct_pattern_fields TOK_RBRACE
 222          | error

 223  variable_pattern : TOK_LowerIdent
 224                   | TOK_MUT TOK_LowerIdent
 225                   | TOK_LowerIdent TOK_COLON typ
 226                   | TOK_MUT TOK_LowerIdent TOK_COLON typ

 227  pattern_list_nonempty : pattern
 228                        | pattern TOK_COMMA pattern_list_nonempty

 229  struct_pattern_fields :
 230                        | struct_pattern_field
 231                        | struct_pattern_field TOK_COMMA struct_pattern_fields

 232  struct_pattern_field : TOK_LowerIdent TOK_COLON pattern
 233                       | error

 234  expr : small_expr
 235       | small_expr TOK_LT expr
 236       | small_expr TOK_LTEQ expr
 237       | small_expr TOK_GT expr
 238       | small_expr TOK_GTEQ expr
 239       | small_expr TOK_EQEQ expr
 240       | small_expr TOK_BANGEQ expr
 241       | small_expr TOK_LOR expr
 242       | small_expr TOK_LAND expr
 243       | small_expr TOK_LXOR expr
 244       | small_expr TOK_BOR expr
 245       | small_expr TOK_BAND expr
 246       | small_expr TOK_BXOR expr
 247       | small_expr TOK_LSHIFT expr
 248       | small_expr TOK_RSHIFT expr
 249       | small_expr TOK_ADD expr
 250       | small_expr TOK_MINUS expr
 251       | small_expr TOK_MUL expr
 252       | small_expr TOK_DIV expr
 253       | small_expr TOK_MOD expr
 254       | small_expr arrow_token
 255       | small_expr keyword_token
 256       | small_expr TOK_LowerIdent
 257       | small_expr TOK_UpperIdent
 258       | small_expr type_token
 259       | small_expr TOK_BANG
 260       | small_expr error

 261  small_expr : atom_expr
 262             | TOK_MINUS atom_expr
 263             | TOK_BANG atom_expr
 264             | TOK_MUT atom_expr
 265             | bi_op_token
 266             | asgn_token
 267             | type_token
 268             | arrow_token
 269             | TOK_UpperIdent TOK_LBRACE struct_expr_fields TOK_RBRACE
 270             | TOK_UpperIdent TOK_LBRACE error

 271  atom_expr : literal
 272            | TOK_LowerIdent
 273            | TOK_THIS
 274            | TOK_LPAREN expr_list TOK_RPAREN
 275            | TOK_UpperIdent
 276            | TOK_UpperIdent TOK_LPAREN expr_list TOK_RPAREN
 277            | TOK_LowerIdent TOK_LPAREN expr_list TOK_RPAREN
 278            | atom_expr TOK_DOT TOK_LowerIdent
 279            | atom_expr TOK_DOT TOK_UpperIdent
 280            | atom_expr TOK_DOT non_ident_token
 281            | atom_expr TOK_DOT TOK_LowerIdent TOK_LPAREN expr_list TOK_RPAREN
 282            | TOK_LPAREN error
 283            | TOK_UpperIdent TOK_LPAREN error
 284            | TOK_LowerIdent TOK_LPAREN error
 285            | atom_expr TOK_DOT TOK_LowerIdent TOK_LPAREN error

 286  struct_expr_fields : struct_expr_field TOK_COMMA struct_expr_fields
 287                     | struct_expr_field
 288                     |

 289  struct_expr_field : struct_expr_field_name any_token expr

 290  struct_expr_field_name : TOK_LowerIdent
 291                         | TOK_UpperIdent
 292                         | other_token

 293  expr_list :
 294            | expr
 295            | expr TOK_COMMA expr_list

 296  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (296)

	error  shift 3
	TOK_EOF  shift 4
	TOK_LPAREN  shift 5
	TOK_LBRACE  shift 6
	TOK_EQ  shift 7
	TOK_EQGT  shift 8
	TOK_MINUSGT  shift 9
	TOK_MINUS  shift 10
	TOK_BANG  shift 11
	TOK_LT  shift 12
	TOK_LTEQ  shift 13
	TOK_GT  shift 14
	TOK_GTEQ  shift 15
	TOK_EQEQ  shift 16
	TOK_BANGEQ  shift 17
	TOK_LOR  shift 18
	TOK_LAND  shift 19
	TOK_LXOR  shift 20
	TOK_BOR  shift 21
	TOK_BAND  shift 22
	TOK_BXOR  shift 23
	TOK_LSHIFT  shift 24
	TOK_RSHIFT  shift 25
	TOK_ADD  shift 26
	TOK_MUL  shift 27
	TOK_DIV  shift 28
	TOK_MOD  shift 29
	TOK_BOREQ  shift 30
	TOK_BANDEQ  shift 31
	TOK_BXOREQ  shift 32
	TOK_LSHIFTEQ  shift 33
	TOK_RSHIFTEQ  shift 34
	TOK_ADDEQ  shift 35
	TOK_MINUSEQ  shift 36
	TOK_MULEQ  shift 37
	TOK_DIVEQ  shift 38
	TOK_MODEQ  shift 39
	TOK_UpperIdent  shift 40
	TOK_LowerIdent  shift 41
	TOK_Integer  shift 42
	TOK_Double  shift 43
	TOK_Char  shift 44
	TOK_String  shift 45
	TOK_TyBool  shift 46
	TOK_TyChar  shift 47
	TOK_TyInt  shift 48
	TOK_TyFloat  shift 49
	TOK_TRUE  shift 50
	TOK_FALSE  shift 51
	TOK_THIS  shift 52
	TOK_IF  shift 53
	TOK_ELSE  shift 54
	TOK_WHILE  shift 55
	TOK_FOR  shift 56
	TOK_BREAK  shift 57
	TOK_CONTINUE  shift 58
	TOK_LET  shift 59
	TOK_MUT  shift 60
	TOK_MATCH  shift 61
	TOK_FUN  shift 62
	TOK_RETURN  shift 63
	TOK_INTERFACE  shift 64
	TOK_IMPL  shift 65
	TOK_TYPE  shift 66
	.  error

	program  goto 67
	bi_op_token  goto 68
	asgn_token  goto 69
	arrow_token  goto 70
	type_token  goto 71
	top_clause  goto 72
	function_impl  goto 73
	expr  goto 74
	stmt  goto 75
	function_decl  goto 76
	lvalue  goto 77
	assignment_op  goto 78
	literal  goto 79
	small_expr  goto 80
	atom_expr  goto 81


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	top_clause : error .  (97)
	stmt : error .  (182)

	error  reduce 97
	TOK_EOF  reduce 97
	TOK_LPAREN  reduce 97
	TOK_LBRACE  reduce 97
	TOK_SEMICOLON  reduce 182
	TOK_EQ  reduce 97
	TOK_EQGT  reduce 97
	TOK_MINUSGT  reduce 97
	TOK_MINUS  reduce 97
	TOK_BANG  reduce 97
	TOK_LT  reduce 97
	TOK_LTEQ  reduce 97
	TOK_GT  reduce 97
	TOK_GTEQ  reduce 97
	TOK_EQEQ  reduce 97
	TOK_BANGEQ  reduce 97
	TOK_LOR  reduce 97
	TOK_LAND  reduce 97
	TOK_LXOR  reduce 97
	TOK_BOR  reduce 97
	TOK_BAND  reduce 97
	TOK_BXOR  reduce 97
	TOK_LSHIFT  reduce 97
	TOK_RSHIFT  reduce 97
	TOK_ADD  reduce 97
	TOK_MUL  reduce 97
	TOK_DIV  reduce 97
	TOK_MOD  reduce 97
	TOK_BOREQ  reduce 97
	TOK_BANDEQ  reduce 97
	TOK_BXOREQ  reduce 97
	TOK_LSHIFTEQ  reduce 97
	TOK_RSHIFTEQ  reduce 97
	TOK_ADDEQ  reduce 97
	TOK_MINUSEQ  reduce 97
	TOK_MULEQ  reduce 97
	TOK_DIVEQ  reduce 97
	TOK_MODEQ  reduce 97
	TOK_UpperIdent  reduce 97
	TOK_LowerIdent  reduce 97
	TOK_Integer  reduce 97
	TOK_Double  reduce 97
	TOK_Char  reduce 97
	TOK_String  reduce 97
	TOK_TyBool  reduce 97
	TOK_TyChar  reduce 97
	TOK_TyInt  reduce 97
	TOK_TyFloat  reduce 97
	TOK_TRUE  reduce 97
	TOK_FALSE  reduce 97
	TOK_THIS  reduce 97
	TOK_IF  reduce 97
	TOK_ELSE  reduce 97
	TOK_WHILE  reduce 97
	TOK_FOR  reduce 97
	TOK_BREAK  reduce 97
	TOK_CONTINUE  reduce 97
	TOK_LET  reduce 97
	TOK_MUT  reduce 97
	TOK_MATCH  reduce 97
	TOK_FUN  reduce 97
	TOK_RETURN  reduce 97
	TOK_INTERFACE  reduce 97
	TOK_IMPL  reduce 97
	TOK_TYPE  reduce 97


state 4
	program : TOK_EOF .  (83)

	.  reduce 83


5: shift/reduce conflict (shift 83, reduce 293) on TOK_RPAREN
state 5
	literal : TOK_LPAREN . TOK_RPAREN  (199)
	atom_expr : TOK_LPAREN . expr_list TOK_RPAREN  (274)
	atom_expr : TOK_LPAREN . error  (282)
	expr_list : .  (293)

	error  shift 82
	TOK_LPAREN  shift 5
	TOK_RPAREN  shift 83
	TOK_EQ  shift 84
	TOK_EQGT  shift 8
	TOK_MINUSGT  shift 9
	TOK_MINUS  shift 10
	TOK_BANG  shift 11
	TOK_LT  shift 12
	TOK_LTEQ  shift 13
	TOK_GT  shift 14
	TOK_GTEQ  shift 15
	TOK_EQEQ  shift 16
	TOK_BANGEQ  shift 17
	TOK_LOR  shift 18
	TOK_LAND  shift 19
	TOK_LXOR  shift 20
	TOK_BOR  shift 21
	TOK_BAND  shift 22
	TOK_BXOR  shift 23
	TOK_LSHIFT  shift 24
	TOK_RSHIFT  shift 25
	TOK_ADD  shift 26
	TOK_MUL  shift 27
	TOK_DIV  shift 28
	TOK_MOD  shift 29
	TOK_BOREQ  shift 85
	TOK_BANDEQ  shift 86
	TOK_BXOREQ  shift 87
	TOK_LSHIFTEQ  shift 88
	TOK_RSHIFTEQ  shift 89
	TOK_ADDEQ  shift 90
	TOK_MINUSEQ  shift 91
	TOK_MULEQ  shift 92
	TOK_DIVEQ  shift 93
	TOK_MODEQ  shift 94
	TOK_UpperIdent  shift 40
	TOK_LowerIdent  shift 95
	TOK_Integer  shift 42
	TOK_Double  shift 43
	TOK_Char  shift 44
	TOK_String  shift 45
	TOK_TyBool  shift 46
	TOK_TyChar  shift 47
	TOK_TyInt  shift 48
	TOK_TyFloat  shift 49
	TOK_TRUE  shift 50
	TOK_FALSE  shift 51
	TOK_THIS  shift 52
	TOK_MUT  shift 60

	bi_op_token  goto 68
	asgn_token  goto 69
	arrow_token  goto 70
	type_token  goto 71
	expr  goto 96
	literal  goto 79
	small_expr  goto 80
	atom_expr  goto 81
	expr_list  goto 97


state 6
	stmt : TOK_LBRACE . stmt_list TOK_RBRACE  (152)
	stmt : TOK_LBRACE . stmt error  (177)
	stmt_list : .  (143)

	error  shift 98
	TOK_LPAREN  shift 5
	TOK_LBRACE  shift 6
	TOK_EQ  shift 7
	TOK_EQGT  shift 8
	TOK_MINUSGT  shift 9
	TOK_MINUS  shift 10
	TOK_BANG  shift 11
	TOK_LT  shift 12
	TOK_LTEQ  shift 13
	TOK_GT  shift 14
	TOK_GTEQ  shift 15
	TOK_EQEQ  shift 16
	TOK_BANGEQ  shift 17
	TOK_LOR  shift 18
	TOK_LAND  shift 19
	TOK_LXOR  shift 20
	TOK_BOR  shift 21
	TOK_BAND  shift 22
	TOK_BXOR  shift 23
	TOK_LSHIFT  shift 24
	TOK_RSHIFT  shift 25
	TOK_ADD  shift 26
	TOK_MUL  shift 27
	TOK_DIV  shift 28
	TOK_MOD  shift 29
	TOK_BOREQ  shift 30
	TOK_BANDEQ  shift 31
	TOK_BXOREQ  shift 32
	TOK_LSHIFTEQ  shift 33
	TOK_RSHIFTEQ  shift 34
	TOK_ADDEQ  shift 35
	TOK_MINUSEQ  shift 36
	TOK_MULEQ  shift 37
	TOK_DIVEQ  shift 38
	TOK_MODEQ  shift 39
	TOK_UpperIdent  shift 40
	TOK_LowerIdent  shift 41
	TOK_Integer  shift 42
	TOK_Double  shift 43
	TOK_Char  shift 44
	TOK_String  shift 45
	TOK_TyBool  shift 46
	TOK_TyChar  shift 47
	TOK_TyInt  shift 48
	TOK_TyFloat  shift 49
	TOK_TRUE  shift 50
	TOK_FALSE  shift 51
	TOK_THIS  shift 52
	TOK_IF  shift 53
	TOK_ELSE  shift 54
	TOK_WHILE  shift 55
	TOK_FOR  shift 56
	TOK_BREAK  shift 57
	TOK_CONTINUE  shift 58
	TOK_LET  shift 99
	TOK_MUT  shift 60
	TOK_MATCH  shift 61
	TOK_RETURN  shift 63
	TOK_RBRACE  reduce 143

	bi_op_token  goto 68
	asgn_token  goto 69
	arrow_token  goto 70
	type_token  goto 71
	expr  goto 74
	stmt  goto 100
	stmt_list  goto 101
	lvalue  goto 77
	assignment_op  goto 78
	literal  goto 79
	small_expr  goto 80
	atom_expr  goto 81


7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_EQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_EQGT
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_MINUSGT
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_MINUS
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_BANG
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_LT
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_LTEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_GT
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_GTEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_EQEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_BANGEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_LOR
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_LAND
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_LXOR
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_BOR
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_BAND
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_BXOR
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_LSHIFT
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_RSHIFT
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_ADD
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_MUL
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_DIV
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_MOD
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_BOREQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_BANDEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_BXOREQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_LSHIFTEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_RSHIFTEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_ADDEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_MINUSEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_MULEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_DIVEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_MODEQ
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_UpperIdent
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_LowerIdent
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_TyBool
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_TyChar
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_TyInt
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_TyFloat
7: reduce/reduce conflict (reduce 31, reduce 184) on TOK_MUT
state 7
	asgn_token : TOK_EQ .  (31)
	assignment_op : TOK_EQ .  (184)

	error  reduce 31
	TOK_LPAREN  reduce 184
	TOK_SEMICOLON  reduce 31
	TOK_EQ  reduce 31
	TOK_EQGT  reduce 31
	TOK_MINUSGT  reduce 31
	TOK_MINUS  reduce 31
	TOK_BANG  reduce 31
	TOK_LT  reduce 31
	TOK_LTEQ  reduce 31
	TOK_GT  reduce 31
	TOK_GTEQ  reduce 31
	TOK_EQEQ  reduce 31
	TOK_BANGEQ  reduce 31
	TOK_LOR  reduce 31
	TOK_LAND  reduce 31
	TOK_LXOR  reduce 31
	TOK_BOR  reduce 31
	TOK_BAND  reduce 31
	TOK_BXOR  reduce 31
	TOK_LSHIFT  reduce 31
	TOK_RSHIFT  reduce 31
	TOK_ADD  reduce 31
	TOK_MUL  reduce 31
	TOK_DIV  reduce 31
	TOK_MOD  reduce 31
	TOK_BOREQ  reduce 31
	TOK_BANDEQ  reduce 31
	TOK_BXOREQ  reduce 31
	TOK_LSHIFTEQ  reduce 31
	TOK_RSHIFTEQ  reduce 31
	TOK_ADDEQ  reduce 31
	TOK_MINUSEQ  reduce 31
	TOK_MULEQ  reduce 31
	TOK_DIVEQ  reduce 31
	TOK_MODEQ  reduce 31
	TOK_UpperIdent  reduce 31
	TOK_LowerIdent  reduce 31
	TOK_Integer  reduce 184
	TOK_Double  reduce 184
	TOK_Char  reduce 184
	TOK_String  reduce 184
	TOK_TyBool  reduce 31
	TOK_TyChar  reduce 31
	TOK_TyInt  reduce 31
	TOK_TyFloat  reduce 31
	TOK_TRUE  reduce 184
	TOK_FALSE  reduce 184
	TOK_THIS  reduce 184
	TOK_AS  reduce 31
	TOK_IF  reduce 31
	TOK_ELSE  reduce 31
	TOK_WHILE  reduce 31
	TOK_FOR  reduce 31
	TOK_BREAK  reduce 31
	TOK_CONTINUE  reduce 31
	TOK_LET  reduce 31
	TOK_MUT  reduce 31
	TOK_IN  reduce 31
	TOK_MATCH  reduce 31
	TOK_FUN  reduce 31
	TOK_RETURN  reduce 31
	TOK_INTERFACE  reduce 31
	TOK_IMPL  reduce 31
	TOK_EXTENDS  reduce 31
	TOK_TYPE  reduce 31


state 8
	arrow_token : TOK_EQGT .  (49)

	.  reduce 49


state 9
	arrow_token : TOK_MINUSGT .  (50)

	.  reduce 50


state 10
	small_expr : TOK_MINUS . atom_expr  (262)

	TOK_LPAREN  shift 5
	TOK_UpperIdent  shift 102
	TOK_LowerIdent  shift 95
	TOK_Integer  shift 42
	TOK_Double  shift 43
	TOK_Char  shift 44
	TOK_String  shift 45
	TOK_TRUE  shift 50
	TOK_FALSE  shift 51
	TOK_THIS  shift 52
	.  error

	literal  goto 79
	atom_expr  goto 103


state 11
	small_expr : TOK_BANG . atom_expr  (263)

	TOK_LPAREN  shift 5
	TOK_UpperIdent  shift 102
	TOK_LowerIdent  shift 95
	TOK_Integer  shift 42
	TOK_Double  shift 43
	TOK_Char  shift 44
	TOK_String  shift 45
	TOK_TRUE  shift 50
	TOK_FALSE  shift 51
	TOK_THIS  shift 52
	.  error

	literal  goto 79
	atom_expr  goto 104


state 12
	bi_op_token : TOK_LT .  (4)

	.  reduce 4


state 13
	bi_op_token : TOK_LTEQ .  (3)

	.  reduce 3


state 14
	bi_op_token : TOK_GT .  (6)

	.  reduce 6


state 15
	bi_op_token : TOK_GTEQ .  (5)

	.  reduce 5


state 16
	bi_op_token : TOK_EQEQ .  (7)

	.  reduce 7


state 17
	bi_op_token : TOK_BANGEQ .  (8)

	.  reduce 8


state 18
	bi_op_token : TOK_LOR .  (9)

	.  reduce 9


state 19
	bi_op_token : TOK_LAND .  (10)

	.  reduce 10


state 20
	bi_op_token : TOK_LXOR .  (11)

	.  reduce 11


state 21
	bi_op_token : TOK_BOR .  (12)

	.  reduce 12


state 22
	bi_op_token : TOK_BAND .  (13)

	.  reduce 13


state 23
	bi_op_token : TOK_BXOR .  (14)

	.  reduce 14


state 24
	bi_op_token : TOK_LSHIFT .  (15)

	.  reduce 15


state 25
	bi_op_token : TOK_RSHIFT .  (16)

	.  reduce 16


state 26
	bi_op_token : TOK_ADD .  (17)

	.  reduce 17


state 27
	bi_op_token : TOK_MUL .  (18)

	.  reduce 18


state 28
	bi_op_token : TOK_DIV .  (19)

	.  reduce 19


state 29
	bi_op_token : TOK_MOD .  (20)

	.  reduce 20

